whole signup functionality working

--- a/views/pages-register.ejs
+++ b/views/pages-register.ejs
@@ -57,17 +57,22 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="username">Password</label>
-                                        <input type="text" class="form-control" name="password" id="username" placeholder="Enter username">
+                                        <input type="password" class="form-control" name="password" id="username" placeholder="Enter username">
                                     </div>
                                     <div class="form-group">
                                         <label for="username">Country</label>
                                         <select name="country" id="country">
-                                            <option value="volvo">India</option>
-                                            <option value="saab">America</option>
-                                            <option value="mercedes">England</option>
-                                            <option value="audi">Nepal</option>
+                                            <option value="India">India</option>
+                                            <option value="America">America</option>
+                                            <option value="England">England</option>
+                                            <option value="Nepal">Nepal</option>
                                         </select>
                                     </div>
+                                    <div class="form-group">
+                                        <label for="checkbox">Click Me</label>
+                                        <input type="checkbox" name="check" >
+                                    </div>
+                                    
                                     
                                     <!-- <div class="form-group">
                                         <label for="username">Confirm Password</label>
