--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -17,6 +17,9 @@
                 <div class="userimg">
                     <img src="/user_img/<%=user.image%>" alt="" class="cover">
                 </div>
+                <div class="listHead">
+                    <h4><%=user.name%></h4>
+                </div>
                 <ul class="nav_icons">
                     <!-- <li><ion-icon name="scan-circle-outline"></ion-icon></li> -->
                     <li><ion-icon name="chatbox"></ion-icon></li>
@@ -147,5 +150,15 @@
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<script src="/socket.io/socket.io.js"></script>
+<script>
+    var senderId="<%=user._id%>"
+    var socket = io(()=>{
+        auth:{
+            token:"<%=user._id%>"
+        }
+    });
+
+</script>
 </body>
 </html>
