--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -12,14 +12,12 @@
     <div class="container">
         <div class="leftSide">
             <!-- Header -->
-            
             <div class="headerl">
                 <div class="userimg">
                     <img src="/user_img/<%=user.image%>" alt="" class="cover">
                 </div>
                 <h4><%=user.name%> <br><span>online</span></h4>
                 <!-- <div class="listHead">
-                  
                 </div> -->
                 <ul class="nav_icons">
                     <!-- <li><ion-icon name="scan-circle-outline"></ion-icon></li> -->
@@ -30,7 +28,7 @@
             <!-- Search Chat -->
             <div class="search_chat">
                 <div>
-                    <input type="text" placeholder="Search or start new chat">
+                    <input type="text" id="search-input" placeholder="Search or start new chat">
                     <ion-icon name="search-outline"></ion-icon> 
                 </div>                
             </div>
@@ -55,24 +53,7 @@
                         <%}%>
                     <%}else{%>
                         <h2>There is no user to display</h2>
-                        <%}%>
-                
-
-                <div class="block unread">
-                    <div class="imgBox">
-                        <img src="user_img/img2.jpg" class="cover" alt="">
-                    </div>
-                    <div class="details">
-                        <div class="listHead">
-                            <h4>Andre</h4>
-                            <p class="time">12:34</p>
-                        </div>
-                        <div class="message_p">
-                            <p>I love your youtube videos!</p>
-                            <b>1</b>
-                        </div>
-                    </div>
-                </div>
+                <%}%>
             </div>
         </div>
         <!-- Right side part -->
@@ -92,9 +73,7 @@
 
             <!-- CHAT-BOX -->
             <div class="chatbox " id="chat-container">
-                
             </div>
-            
             <!-- CHAT INPUT -->
             <div class="chat_input">
                 <!-- <ion-icon name="happy-outline"></ion-icon>
@@ -114,9 +93,10 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="/socket.io/socket.io.js"></script>
 <script>
-     var senderId="<%=user._id%>"
-     var receiverId
-     var socket = io({
+    $(document).ready(()=>{
+        var senderId="<%=user._id%>"
+        var receiverId
+        var socket = io({
         auth:{
             token:"<%=user._id%>"
         }
@@ -127,12 +107,11 @@
             $.ajax({
                 url:`/api/v1/getUser/${receiverId}`,
                 type:'post',
-                data: { userId: receiverId },
+                data: {receiverId:receiverId},
                 success: function (response){
                     receiverId=response.user._id
                     var user = response.user;
                     var receiverImage=user.image
-            
          			var receiverName = user.name;
                      let header=`
                         <div class="imgText">
@@ -148,7 +127,6 @@
                         `
                 $('.headerr').html(header)
                 }
-               
             })
         })
     $('#chat-form').submit(function(e){
@@ -170,29 +148,43 @@
                     <p>${chat}<br><span>${currentHour}:${currentMinute}</span></p>
                 </div>`
                 $('#chat-container').append(html)
-                socket.emit('newChat',data.data)
+                socket.emit('newChat',data.chat)
                }else{
                 console.log(error.message)
                 alert(data.msg)
                }
             }
         })
-
     })
-    
-    socket.on('loadnewchat',function(data){
-        // if(senderId==data.receiverId){
-            console.log("data",data);
+    // Searching functionality
+    $('#search-input').on('input', function() {
+    var searchText = $(this).val().toLowerCase();
+    $('.user-list').each(function() {
+        var userName = $(this).find('.details h4').text().toLowerCase();
+        if (userName.indexOf(searchText) !== -1) {
+            $(this).show();
+        } else {
+            $(this).hide();
+        }
+    });
+});
+//implement chat functionality on other side
+socket.on('loadnewchat', function (data) {
+    console.log("receiverId",data.receiverId)
+    console.log("data",data)
+    const currentDate = new Date();
+    const currentHour = currentDate.getHours();
+    const currentMinute = currentDate.getMinutes();
+ 
+    let html = `
+      <div class="message friend_msg">
+        <p>${data.message}<br><span>${currentHour}:${currentMinute}</span></p>
+      </div>
+    `;
+    $('#chat-container').append(html);
+  });
 
-            const currentDate = new Date();
-            const currentHour = currentDate.getHours();
-            const currentMinute = currentDate.getMinutes();
-            let html=` <div class="message friend_msg">
-                       <p>${data.message}<br><span>${currentHour}:${currentMinute}</span></p>
-                        </div> `
-            $('#chat-container').append(html)
-        // }      
-    })
+     })
 </script>
 </body>
 </html>
